--- a/references.bib
+++ b/references.bib
@@ -148,3 +148,9 @@ author={Peninsula Clean Energy},
 	journal = {IAEA},
 	author = {IAEA}
 }
+
+@misc{altenergymag,
+title={Hydropower And Pumped Storage},
+url={https://www.altenergymag.com/article/2015/11/hydropower-and-pumped-storage/22104#:~:text=The pumped storage provides a,enabling additional system peak capacity.&text=Hydropower or water power is,be harnessed for useful purposes.},
+journal={AltEnergyMag}
+}
